# oauth-boilerplate-rust

./: .env.example  .gitignore  Cargo.toml  bench_argon2.ps1  generate_pem_key.ps1
certs/: server.crt  server.key
migrations/: README.md
migrations/2025-10-07-111620-0000_create_users_table/: up.sql
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs
src/db/: diesel_store.rs  mod.rs  pool.rs  store.rs
src/docs/: MIGRATION_GUIDE.md  README.md  SETUP.md  constituion.md
src/handlers/: auth_handler.rs  user_handler.rs
src/middleware/: auth_middleware.rs  mod.rs  rate_limit.rs  timing.rs
src/models/: user.rs
src/routes/: auth.rs  home.rs  mod.rs  profile.rs
src/static/: dashboard.html  login.html  register.html
src/utils/: hashing.rs  jwt.rs
tests/: auth_tests.rs  profile_tests.rs
tests/common/: mod.rs
