[package]
name = "auth_session"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.6"}
chrono = { version = "0.4.42", features = ["serde"]}
diesel = { version = "2.3.2", features = ["postgres", "uuid", "chrono"]}
diesel-async = {version = "0.7.3", features = ["postgres", "deadpool"]}
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = { version = "1.0.145"}
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
jsonwebtoken = {version = "10.0.0", features = ["rust_crypto"]}
argon2 = "0.5.3"
reqwest = {version = "0.12.22", features = ["json"]}
tower-http = {version = "0.6.6", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
uuid = { version = "1.18.1", features = ["v4", "serde"]}
oauth2 = "4.4.2"
tower = { version = "0.5.2", features = ["util"] }
rustls = "0.23"
rustls-pemfile = "2.2"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dashmap = "6.1"